# IoT_simulation

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.bak
config/: simulation_config.ini  simulation_config.json
doxygen_docs/html/: annotated.html  classes.html  dir_000001_000004.html  dir_000002_000000.html  dir_000002_000005.html  dir_000003_000004.html  dir_000005_000000.html  dir_000005_000007.html  dir_000006_000004.html  dir_000007_000000.html  dir_000008_000004.html  dir_000009_000000.html  dir_000009_000005.html  dir_000009_000012.html  dir_000010_000004.html  dir_000011_000004.html  dir_000013_000004.html  dir_0ae5fd04a9b991f2c376fafa197d3147.html  dir_0ae5fd04a9b991f2c376fafa197d3147_dep.map  dir_0ae5fd04a9b991f2c376fafa197d3147_dep.md5  dir_313caf1132e152dd9b58bea13a4052ca.html  dir_313caf1132e152dd9b58bea13a4052ca_dep.map  dir_313caf1132e152dd9b58bea13a4052ca_dep.md5  dir_3d69f64eaf81436fe2b22361382717e5.html  dir_5b4f22f4782ab9e132490b62f43f6146.html  dir_5b4f22f4782ab9e132490b62f43f6146_dep.map  dir_5b4f22f4782ab9e132490b62f43f6146_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_6fac9273c1f4413d2ee63ba6cd0b0eb2.html  dir_6fac9273c1f4413d2ee63ba6cd0b0eb2_dep.map  dir_6fac9273c1f4413d2ee63ba6cd0b0eb2_dep.md5  dir_821002d4f10779a80d4fb17bc32f21f1.html  dir_8a6c31bbbfb30065ee9a683ead3fe21a.html  dir_8a6c31bbbfb30065ee9a683ead3fe21a_dep.map  dir_8a6c31bbbfb30065ee9a683ead3fe21a_dep.md5  dir_aebb8dcc11953d78e620bbef0b9e2183.html  dir_aebb8dcc11953d78e620bbef0b9e2183_dep.map  dir_aebb8dcc11953d78e620bbef0b9e2183_dep.md5  (+107 more)
doxygen_docs/html/d0/d0e/: IPSecManager_8h__dep__incl.map  IPSecManager_8h__dep__incl.md5
doxygen_docs/html/d0/d13/: classiot_1_1ProtocolAwareDevice-members.html
doxygen_docs/html/d0/d1e/: MeshNetwork_8h__incl.map  MeshNetwork_8h__incl.md5
doxygen_docs/html/d0/d39/: classiot_1_1TemperatureSensor.html
doxygen_docs/html/d0/d50/: BatteryManager_8h__dep__incl.map  BatteryManager_8h__dep__incl.md5
doxygen_docs/html/d0/d5d/: classiot_1_1ProtocolAwareDevice__coll__graph.map  classiot_1_1ProtocolAwareDevice__coll__graph.md5
doxygen_docs/html/d0/d60/: classiot_1_1MeshNetwork-members.html
doxygen_docs/html/d0/d72/: BatterySensors_8h__incl.map  BatterySensors_8h__incl.md5
doxygen_docs/html/d0/d81/: Actuator_8h.html  Actuator_8h_source.html
doxygen_docs/html/d0/d85/: Sensor_8h__incl.map  Sensor_8h__incl.md5
doxygen_docs/html/d0/d90/: classiot_1_1Sensor-members.html
doxygen_docs/html/d0/d91/: MeshNetwork_8cpp.html
doxygen_docs/html/d0/d9e/: MeshNetwork_8h.html  MeshNetwork_8h_source.html
doxygen_docs/html/d0/da2/: ConcreteSensors_8cpp__incl.map  ConcreteSensors_8cpp__incl.md5
doxygen_docs/html/d0/ddb/: classiot_1_1Actuator__coll__graph.map  classiot_1_1Actuator__coll__graph.md5
doxygen_docs/html/d0/df1/: structiot_1_1ProtocolCharacteristics.html
doxygen_docs/html/d0/df4/: classiot_1_1HumiditySensor-members.html
doxygen_docs/html/d1/d0e/: structiot_1_1ProtocolCharacteristics-members.html
doxygen_docs/html/d1/d16/: ConcreteSensors_8cpp.html
doxygen_docs/html/d1/db4/: structiot_1_1NetworkManager_1_1NetworkStats-members.html
doxygen_docs/html/d1/de8/: IPSecManager_8h.html  IPSecManager_8h_source.html
doxygen_docs/html/d1/df2/: SimulationEngine_8h__dep__incl.map  SimulationEngine_8h__dep__incl.md5
doxygen_docs/html/d2/d01/: classiot_1_1ZigBeeMotionSensor__inherit__graph.map
doxygen_docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enums_5.js  (+56 more)
include/core/: DeviceManager.h  IoTDevice.h  Message.h  NetworkManager.h
include/devices/: Actuator.h  BatteryManager.h  BatterySensors.h  ConcreteActuators.h  ConcreteSensors.h  NetworkMonitor.h  ProtocolAwareDevice.h  ProtocolSensors.h  Sensor.h
include/network/: MeshNetwork.h  NetworkManager.h  ProtocolCharacteristics.h
include/security/: IPSecManager.h  SecurityManager.h
include/simulation/: SimulationEngine.h
include/utils/: ConfigManager.h  PerformanceMonitor.h
src/: main.cpp
src/core/: DeviceManager.cpp  IoTDevice.cpp  Message.cpp
src/devices/: Actuator.cpp  BatteryManager.cpp  BatterySensors.cpp  ConcreteActuators.cpp  ConcreteSensors.cpp  NetworkMonitor.cpp  Sensor.cpp
src/network/: MeshNetwork.cpp  NetworkManager.cpp
src/security/: IPSecManager.cpp  SecurityManager.cpp
src/simulation/: SimulationEngine.cpp
src/utils/: ConfigManager.cpp  PerformanceMonitor.cpp
test/: comprehensive_test.cpp  energy_mesh_test.cpp  enhanced_simulation_test.cpp  ipsec_test.cpp  simulation_test.cpp
tests/: CMakeLists.txt
(+500 files in other folders)
